<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <prerequisites>
        <maven>3.0</maven>
    </prerequisites>
    <parent>
        <groupId>com.thenewmotion</groupId>
        <artifactId>github-parent-pom</artifactId>
        <version>1.8</version>
    </parent>
    <artifactId>scala-parent-pom_2.11</artifactId>
    <version>2.10</version>
    <packaging>pom</packaging>
    <name>Scala Parent Pom</name>
    <description>Parent pom for scala maven based projects</description>
    <url>${github.repository.url}</url>
    <inceptionYear>2012</inceptionYear>
    <developers>
        <developer>
            <name>Yaroslav Klymko</name>
            <email>t3hnar@gmail.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
        <scala.version>2.11</scala.version>
        <scala.lang.version>2.11.6</scala.lang.version>
    </properties>
    <scm>
        <url>https://github.com/thenewmotion/scala-parent-pom</url>
        <connection>scm:git:ssh://git@github.com/thenewmotion/scala-parent-pom</connection>
        <developerConnection>scm:git:ssh://git@github.com/thenewmotion/scala-parent-pom</developerConnection>
      <tag>scala-parent-pom_2.11-2.10</tag>
    </scm>
    <repositories>
        <repository>
            <id>thenewmotion</id>
            <name>The New Motion Repository</name>
            <url>http://nexus.thenewmotion.com/content/groups/public</url>
        </repository>
        <repository>
            <id>typesafe</id>
            <name>Typesafe Repository</name>
            <url>http://repo.typesafe.com/typesafe/releases/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2_${scala.version}</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scalacheck</groupId>
            <artifactId>scalacheck_${scala.version}</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-compiler</artifactId>
                <version>${scala.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-reflect</artifactId>
                <version>${scala.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-actors</artifactId>
                <version>${scala.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-swing</artifactId>
                <version>${scala.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scalap</artifactId>
                <version>${scala.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.specs2</groupId>
                <artifactId>specs2_${scala.version}</artifactId>
                <version>2.3.13</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.scalacheck</groupId>
                <artifactId>scalacheck_${scala.version}</artifactId>
                <version>1.11.6</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>1.10.8</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <!--suppress MavenModelInspection -->
        <sourceDirectory>src/main/scala</sourceDirectory>
        <!--suppress MavenModelInspection -->
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.1.6</version>
                    <configuration>
                        <args>
                            <arg>-unchecked</arg>
                            <arg>-deprecation</arg>
                        </args>
                        <jvmArgs>
                            <jvmArg>-server</jvmArg>
                            <jvmArg>-Xms256m</jvmArg>
                            <jvmArg>-Xmx1024m</jvmArg>
                            <jvmArg>-Xss1m</jvmArg>
                            <jvmArg>-XX:MaxPermSize=512m</jvmArg>
                            <jvmArg>-XX:+TieredCompilation</jvmArg>
                        </jvmArgs>
                        <scalaVersion>${scala.lang.version}</scalaVersion>
                        <charset>${project.build.sourceEncoding}</charset>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>compile</goal>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.17</version>
                    <configuration>
                        <argLine>-server -Xms128m -Xmx512m -XX:MaxPermSize=256m -XX:+TieredCompilation</argLine>
                        <includes>
                            <include>**/*Spec.class</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.2</version>
                    <configuration>
                        <source>1.7</source>
                        <target>1.7</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>2.1.10</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>revision</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.scalariform</groupId>
                    <artifactId>scalariform-maven-plugin</artifactId>
                    <version>0.1.4</version>
                    <executions>
                        <execution>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>format</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <alignParameters>true</alignParameters>
                        <alignSingleLineCaseStatements>true</alignSingleLineCaseStatements>
                        <doubleIndentClassDeclaration>true</doubleIndentClassDeclaration>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
